starstream-to-wasm/tests/snapshots/inputs@yield.star.snap
---
source: starstream-to-wasm/tests/snapshots.rs
input_file: starstream-to-wasm/tests/inputs/yield.star
---
==== AST ====
Program {
    shebang: None,
    definitions: [
        Spanned {
            node: Abi(
                AbiDef {
                    name: Identifier {
                        name: "Foo",
                        span: 4..7,
                    },
                    parts: [
                        FnDecl(
                            AbiMethodDecl {
                                name: Identifier {
                                    name: "foo",
                                    span: 17..20,
                                },
                                params: [],
                                return_type: None,
                                span: 14..24,
                            },
                        ),
                    ],
                },
            ),
            span: 0..27,
        },
        Spanned {
            node: Utxo(
                UtxoDef {
                    name: Identifier {
                        name: "MyUtxo",
                        span: 32..38,
                    },
                    parts: [
                        Function(
                            FunctionDef {
                                export: Some(
                                    UtxoMain,
                                ),
                                name: Identifier {
                                    name: "hello_utxo",
                                    span: 53..63,
                                },
                                params: [
                                    FunctionParam {
                                        public: false,
                                        name: Identifier {
                                            name: "x",
                                            span: 64..65,
                                        },
                                        ty: TypeAnnotation {
                                            name: [
                                                Identifier {
                                                    name: "i32",
                                                    span: 67..70,
                                                },
                                            ],
                                            generics: [],
                                        },
                                    },
                                ],
                                return_type: None,
                                body: Block {
                                    statements: [
                                        Spanned {
                                            node: Expression(
                                                Spanned {
                                                    node: Yield {
                                                        abis: [
                                                            Identifier {
                                                                name: "Foo",
                                                                span: 88..91,
                                                            },
                                                        ],
                                                    },
                                                    span: 82..92,
                                                },
                                            ),
                                            span: 82..98,
                                        },
                                    ],
                                    tail_expression: None,
                                    span: 72..104,
                                },
                            },
                        ),
                        AbiImpl {
                            abi: Identifier {
                                name: "Foo",
                                span: 109..112,
                            },
                            parts: [
                                FunctionDef {
                                    export: None,
                                    name: Identifier {
                                        name: "foo",
                                        span: 126..129,
                                    },
                                    params: [],
                                    return_type: None,
                                    body: Block {
                                        statements: [
                                            Spanned {
                                                node: Resume,
                                                span: 146..162,
                                            },
                                        ],
                                        tail_expression: None,
                                        span: 132..168,
                                    },
                                },
                            ],
                        },
                    ],
                },
            ),
            span: 27..172,
        },
    ],
}

==== Inference trace ====

T-Utxo: MyUtxo => 
  T-Fn: hello_utxo => ()
    T-Expr: {hello_utxo: fn(i32) -> () [hello_utxo], x: i32} ⊢ yield(Foo); ⇒ ()
  T-Fn: foo => ()
    T-Resume: {foo: fn() -> () [foo], hello_utxo: fn(i32) -> () [hello_utxo]} ⊢ resume; ⇒ ()
      Unify-Const: () ~ () => {}

==== Typed AST ====
TypedProgram {
    definitions: [
        Abi(
            TypedAbiDef {
                name: Identifier {
                    name: "Foo",
                    span: 4..7,
                },
                parts: [
                    FnDecl(
                        TypedAbiMethodDecl {
                            name: Identifier {
                                name: "foo",
                                span: 17..20,
                            },
                            params: [],
                            return_type: Unit,
                            span: 17..20,
                        },
                    ),
                ],
            },
        ),
        Utxo(
            TypedUtxoDef {
                name: Identifier {
                    name: "MyUtxo",
                    span: 32..38,
                },
                parts: [
                    Function(
                        TypedFunctionDef {
                            export: Some(
                                UtxoMain,
                            ),
                            name: Identifier {
                                name: "hello_utxo",
                                span: 53..63,
                            },
                            params: [
                                TypedFunctionParam {
                                    public: false,
                                    name: Identifier {
                                        name: "x",
                                        span: 64..65,
                                    },
                                    ty: Int(
                                        I32,
                                    ),
                                },
                            ],
                            return_type: Unit,
                            body: TypedBlock {
                                statements: [
                                    Expression(
                                        Spanned {
                                            node: TypedExpr {
                                                ty: Unit,
                                                kind: Yield {
                                                    abis: [
                                                        AbiType {
                                                            name: Identifier {
                                                                name: "Foo",
                                                                span: 4..7,
                                                            },
                                                            methods: [
                                                                TypedAbiMethodDecl {
                                                                    name: Identifier {
                                                                        name: "foo",
                                                                        span: 17..20,
                                                                    },
                                                                    params: [],
                                                                    return_type: Unit,
                                                                    span: 17..20,
                                                                },
                                                            ],
                                                        },
                                                    ],
                                                },
                                            },
                                            span: 82..92,
                                        },
                                    ),
                                ],
                                tail_expression: None,
                            },
                        },
                    ),
                    AbiImpl {
                        span: 109..112,
                        abi: AbiNarrow(
                            AbiType {
                                name: Identifier {
                                    name: "Foo",
                                    span: 4..7,
                                },
                                methods: [
                                    TypedAbiMethodDecl {
                                        name: Identifier {
                                            name: "foo",
                                            span: 17..20,
                                        },
                                        params: [],
                                        return_type: Unit,
                                        span: 17..20,
                                    },
                                ],
                            },
                        ),
                        parts: [
                            TypedFunctionDef {
                                export: None,
                                name: Identifier {
                                    name: "foo",
                                    span: 126..129,
                                },
                                params: [],
                                return_type: Unit,
                                body: TypedBlock {
                                    statements: [
                                        Resume,
                                    ],
                                    tail_expression: None,
                                },
                            },
                        ],
                    },
                ],
                ty: UtxoNamed(
                    "MyUtxo",
                ),
            },
        ),
    ],
}

==== Core WebAssembly ====
(module
  (type (;0;) (func (param i64 i64 i64 i64)))
  (type (;1;) (func (param i32) (result i32)))
  (type (;2;) (func (param i32)))
  (type (;3;) (func))
  (type (;4;) (func (param i32) (result i32 i32 i32)))
  (type (;5;) (func (param i32 i32 i32) (result i32)))
  (import "starstream:std/builtin" "implements-method" (func (;0;) (type 0)))
  (import "[export]my-utxo" "[resource-new]utxo" (func (;1;) (type 1)))
  (import "[export]my-utxo" "[resource-drop]utxo" (func (;2;) (type 2)))
  (import "my-utxo" "[static]utxo.hello-utxo" (func (;3;) (type 1)))
  (memory (;0;) 1)
  (global (;0;) (mut i32) (i32.const 0))
  (global (;1;) (mut i32) (i32.const 0))
  (global (;2;) (mut i32) (i32.const 0))
  (export "my-utxo#[static]utxo.hello-utxo" (func 5))
  (export "my-utxo#[method]utxo.foo" (func 7))
  (export "my-utxo#get-storage" (func 9))
  (export "my-utxo#set-storage" (func 10))
  (export "memory" (memory 0))
  (func (;4;) (type 3)
    (block ;; label = @1
      (br_if 0 (;@1;)
        (i32.ne
          (global.get 0)
          (i32.const 1)))
      (return_call 6))
    (unreachable)
  )
  (func (;5;) (type 1) (param i32) (result i32)
    (local i32)
    (local.set 1
      (call 1
        (i32.const 0)))
    (global.set 0
      (i32.const 1))
    (global.set 1
      (local.get 0))
    (global.set 2
      (local.get 1))
    (call 0
      (i64.const -8086495256948496852)
      (i64.const 3765343665581825017)
      (i64.const -6863622839687364077)
      (i64.const -5843589418109203719))
    (local.get 1)
  )
  (func (;6;) (type 3)
    (local i32 i32)
    (local.set 0
      (global.get 1))
    (global.set 1
      (i32.const 0))
    (local.set 1
      (global.get 2))
    (global.set 2
      (i32.const 0))
  )
  (func (;7;) (type 2) (param i32)
    (return_call 4)
  )
  (func (;8;) (type 4) (param i32) (result i32 i32 i32)
    (local i32)
    (global.get 0)
    (global.get 1)
    (global.get 2)
  )
  (func (;9;) (type 1) (param i32) (result i32)
    (local i32 i32 i32 i32)
    (i32.const 4)
    (call 8
      (local.get 0))
    (local.set 4)
    (local.set 3)
    (local.set 2)
    (local.set 1)
    (i32.store
      (local.get 1)
      (local.get 2))
    (i32.store offset=4
      (local.get 1)
      (local.get 3))
    (i32.store offset=8
      (local.get 1)
      (local.get 4))
    (i32.const 4)
  )
  (func (;10;) (type 5) (param i32 i32 i32) (result i32)
    (local i32 i32 i32)
    (global.set 0
      (local.get 0))
    (global.set 1
      (local.get 1))
    (global.set 2
      (local.get 2))
    (return_call 1
      (i32.const 0))
  )
  (@custom "component-type"
    (component
      (@custom "wit-component-encoding" "\04\00")
      (type (;0;)
        (component
          (type (;0;)
            (component
              (type (;0;)
                (instance
                  (export (;0;) "utxo" (type (sub resource)))
                  (type (;1;) (own 0))
                  (type (;2;) (func (param "x" s32) (result 1)))
                  (export (;0;) "[static]utxo.hello-utxo" (func (type 2)))
                  (type (;3;) (borrow 0))
                  (type (;4;) (func (param "self" 3)))
                  (export (;1;) "[method]utxo.foo" (func (type 4)))
                  (type (;5;) (record (field "yield" s32) (field "yield1" s32) (field "yield1-v1" s32)))
                  (export (;6;) "storage" (type (eq 5)))
                  (type (;7;) (func (param "self" 3) (result 6)))
                  (export (;2;) "get-storage" (func (type 7)))
                  (type (;8;) (func (param "storage" 6) (result 1)))
                  (export (;3;) "set-storage" (func (type 8)))
                )
              )
              (import "my-utxo" (instance (;0;) (type 0)))
              (type (;1;)
                (instance
                  (type (;0;) (tuple u64 u64 u64 u64))
                  (type (;1;) (func (param "hash" 0)))
                  (export (;0;) "implements-method" (func (type 1)))
                )
              )
              (import "starstream:std/builtin" (instance (;1;) (type 1)))
              (type (;2;)
                (instance
                  (export (;0;) "utxo" (type (sub resource)))
                  (type (;1;) (own 0))
                  (type (;2;) (func (param "x" s32) (result 1)))
                  (export (;0;) "[static]utxo.hello-utxo" (func (type 2)))
                  (type (;3;) (borrow 0))
                  (type (;4;) (func (param "self" 3)))
                  (export (;1;) "[method]utxo.foo" (func (type 4)))
                  (type (;5;) (record (field "yield" s32) (field "yield1" s32) (field "yield1-v1" s32)))
                  (export (;6;) "storage" (type (eq 5)))
                  (type (;7;) (func (param "self" 3) (result 6)))
                  (export (;2;) "get-storage" (func (type 7)))
                  (type (;8;) (func (param "storage" 6) (result 1)))
                  (export (;3;) "set-storage" (func (type 8)))
                )
              )
              (export (;2;) "my-utxo" (instance (type 2)))
            )
          )
          (export (;0;) "my-namespace:my-package/my-world" (component (type 0)))
        )
      )
      (export (;1;) "x" (type 0))
    )
  )
)

==== WIT ====
package root:component;

world root {
  import my-utxo: interface {
    resource utxo {
      hello-utxo: static func(x: s32) -> utxo;
    }
  }
  import starstream:std/builtin;

  export my-utxo: interface {
    resource utxo {
      hello-utxo: static func(x: s32) -> utxo;
      foo: func();
    }

    record storage {
      yield: s32,
      yield1: s32,
      yield1-v1: s32,
    }

    get-storage: func(self: borrow<utxo>) -> storage;

    set-storage: func(storage: storage) -> utxo;
  }
}
package starstream:std {
  interface builtin {
    implements-method: func(hash: tuple<u64, u64, u64, u64>);
  }
}
