starstream-to-wasm/tests/snapshots/multifile@helper_script_exported.snap
---
source: starstream-to-wasm/tests/snapshots.rs
input_file: starstream-to-wasm/tests/multifile/helper_script_exported
---
==== Workspace ====
ModuleGraph {
    modules.len(): 2,
    topo_order: [
        ModuleId(0),
        ModuleId(1),
    ],
    edges: {
        1: [
            PathImport {
                def_index: 1,
                target: ModuleId(0),
                span: 41..63,
            },
        ],
    },
    contract_entries: [
        ModuleId(1),
    ],
}
==== main.star ====
package root:component;

world root {
  import starstream:std/builtin;
  use starstream:std/builtin.{utxo as s-utxo, token as s-token};

  export helper-script: func() -> s64;
  export run: func() -> s64;
}
package starstream:std {
  interface builtin {
    resource utxo {
      has-method: func(hash: tuple<u64, u64, u64, u64>) -> bool;
    }

    resource token;
  }
}
